--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
             <version>5.18.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- Mockito-inline https://mvnrepository.com/artifact/org.mockito/mockito-inline-->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>5.2.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
